--- a/style.css
+++ b/style.css
@@ -30,8 +30,9 @@ body{
 }
 
 .conteudo-titulo{
-    text-align: center;
+    texto-aling: center;
     margin-top: 80px;
+
 }
 
 .conteudo-senha{
@@ -47,7 +48,7 @@ body{
     color: var(--branco);
     font-family: var(--roboto-mono);
     font-size: 40px;
-    width: 70%;
+    width:70%;
 }
 
 #campo-senha:focus{
@@ -57,6 +58,7 @@ body{
 .conteudo{
     max-width: 1200px;
     margin: 0 auto;
+
 }
 
 .parametro{
@@ -71,26 +73,29 @@ body{
     font-size: 28px;
 }
 
-.parametro-senha__titulo{
+.parametro-senha_titulo{
     font-size: 24px;
 }
 
-.parametro-coluna__senha{
+.parametro-coluna_senha{
     display: flex;
     flex-direction: column;
     justify-content: center;
+
 }
 
 .parametro-senha{
     width: 50%;
     margin: 0 auto;
+
 }
 
 .parametro-senha-botoes{
     display:flex;
     justify-content: center;
 }
-.parametro-senha__botao{
+
+.parametro-senha_botao{
     background-color: var(--fundo-texto);
     color: var(--branco);
     border: 2px solid var(--borda);
@@ -99,12 +104,13 @@ body{
     cursor: pointer;
 }
 
-.parametro-senha__texto{
+.parametro-senha_texto{
     padding: 24px;
     border-top: 2px solid var(--borda);
-    border-bottom: 2px soid var(--borda);
-    margin: - auto;
-    font-size; 24px;
+    border-bottom: 2px solid var(--borda);
+    margin: 0 auto;
+    font-size: 24px;
+
 }
 
 label{
@@ -115,4 +121,42 @@ label{
     width: 20px;
     height: 20px;
     cursor: pointer;
+}
+
+.barra{
+    background-color: var(--fundo-sena);
+    height: 30px;
+    width: 100%;
+}
+
+.forca{
+    height: 30px;
+    position: relative;
+    bottom: 30px;
+}
+
+.fraca{
+    width: 25%;
+    background-color: #e71b32;
+}
+
+.media{
+    background-color: #FAF408;
+    width: 50%;
+}
+
+.forte{
+    background-color: #00FF85;
+    width: 100%;
+}
+
+.parametro-senha-textos{
+    display: flex;
+    justify-content: space-between;
+}
+
+@media screen and(min-width: 768px){
+    .parametro-culuna_senha{
+        flex-direction: row;
+    }
 }
